# NeoCoder-neo4j-ai-workflow

./: .env.example  .gitignore  README.md  example_mcp_config.json  pyproject.toml  rdcf.md  reproduction_script.py
.trunk/: trunk.yaml
docs/: vibe_vectors.md
docs/analysis/: neocoder_mcp_test_report.md
src/mcp_neocoder/: __main__.py  action_templates.py  cypher_snippets.py  decorators.py  event_loop_manager.py  extract_incarnation_types.py  generators.py  incarnation_registry.py  init_db.py  polymorphic_adapter.py  process_manager.py  qdrant_manager.py  qdrant_utils.py  server.py  tool_proposals.py  tool_registry.py
src/mcp_neocoder/incarnations/: base_incarnation.py  code_analysis_incarnation.py  coding_incarnation.py  data_analysis_incarnation.py  decision_incarnation.py  knowledge_graph_incarnation.py  rdcf_lv_incarnation.py  research_incarnation.py
src/mcp_neocoder/lv_framework/: __init__.py  lv_templates.py
src/mcp_neocoder/maintenance/: __init__.py  graph_cleaner.py
src/mcp_neocoder/processing/: __init__.py  batch.py  cleaner.py  converter.py  excel.py
src/scripts/: README.md  __init__.py  add_enhanced_templates.py  add_new_incarnation.py  add_templates.py  auto_converter.py  batch_processor.py  data_cleaner.py  excel_processor.py  init_graph.py  inspect_fastmcp.py  refresh_guidance_hub.py  seed_cypher_snippets.py  template_manager.py  update_schema_tool_proposals.py  verify_global_registration.py  verify_rdcf_lv.py
src/templates/: KNOWLEDGE_QUERY_LV.md  code_analyze.cypher  cypher_snippet_toolkit.cypher  deploy_template.cypher  enhanced_action_templates.md  feature_template.cypher  fix_template.cypher  refactor_template.cypher  tool_add_template.cypher
tests/: reproduce_crash.py  test_output.txt  test_stdio.py  validate_session_safety.py  verify_tools.py
